--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -1,6 +1,6 @@
 [user]
-	name = Jean-Sébastien Ney
-	email = jeansebastien.ney@gmail.com
+	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
+	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 
 [alias]  
 	b = branch
@@ -44,14 +44,17 @@
 	untracked = cyan
 
 [core]
-	excludesfile = /Users/jney/.gitignore
-	editor = mate -w
+	excludesfile = <%= ENV['HOME'] %>/.gitignore
+	editor = <%= (`which mate` && $?==0) ? "mate -w" : "emacs" %>
 	pager = "/opt/local/bin/less -RciqMSj5"
 	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
 
+[format]
+	pretty = %C(yellow)%h%Creset %s
+  
 [apply]
 	whitespace = nowarn
 
 [github]
-	user = jney
-	token = 98c4cf77c19d45d240b77c6a5ec1ea64
+	user = <%= print("Your Github Name: "); STDOUT.flush; STDIN.gets.chomp %>
+	token = <%= print("Your Github Token: "); STDOUT.flush; STDIN.gets.chomp %>
