--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -46,7 +46,7 @@
 [core]
 	excludesfile = <%= ENV['HOME'] %>/.gitignore
 	editor = <%= (`which mate` && $?==0) ? "mate -w" : "emacs" %>
-	pager = "/opt/local/bin/less -RciqMSj5"
+	pager = "less -RciqMSj5"
 	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
 
 [format]
