--- a/.gitconfig.erb
+++ b/.gitconfig.erb
@@ -44,7 +44,7 @@
 	untracked = cyan
 
 [core]
-	excludesfile = <%= ENV['HOME'] %>/.gitignore
+	excludesfile = <%= ENV['HOME'] %>/.global_ignore
 	editor = <%= (`which mate` && $?==0) ? "mate -w" : "emacs" %>
 	pager = "less -RciqMSj5"
 	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
