--- a/.gitconfig.erb
+++ b/.gitconfig.erb
@@ -12,23 +12,14 @@
 	cr = clone --recursive
 	d = diff
 	l = log
-	ll = log -p
-	lt = log trunk..
-	llt = log -p trunk..
-	lm = log master..
-	llm = log -p master..
+	lc = log -p -n1
+	ll = log --abbrev-commit --date=short --pretty=format:"%h | %cd | %an | %s"
 	master = checkout master
 	msg = commit --allow-empty -m
+	pullall = !git pull && git submodule update --init --recursive
 	rollback = checkout --
-	st = status -s
+	st = status -sb
 	vis = !gitk --all &
-
-	# more log
-	# http://pyrtsa.posterous.com/aligning-your-git-logs
-	l50 = "!git log --abbrev-commit --date=short --pretty=format:'%x00%h%x00%cd%x00%s%x00%an%x00%d' | gawk -F '\\0' '{ printf \"%s\\033[31m%s\\033[0m \\033[32m%s\\033[0m %-50s \\033[30;1m%s\\033[0m\\033[33m%s\\n\", $1, $2, $3, gensub(/(.{49}).{2,}/, \"\\\\1…\",\"g\",$4), $5, $6 }' | less -R"
-	l80 = "!git log --abbrev-commit --date=short --pretty=format:'%x00%h%x00%cd%x00%s%x00%an%x00%d' | gawk -F '\\0' '{ printf \"%s\\033[31m%s\\033[0m \\033[32m%s\\033[0m %-80s \\033[30;1m%s\\033[0m\\033[33m%s\\n\", $1, $2, $3, gensub(/(.{79}).{2,}/, \"\\\\1…\",\"g\",$4), $5, $6 }' | less -R"
-	lg50 = "!git log --graph --color=always --abbrev-commit --date=relative --pretty=format:'%x00%h%x00%s%x00%cd%x00%an%x00%d' | gawk -F '\\0' '{ printf \"%s\\033[31m%s\\033[0m %-50s \\033[32m%14s\\033[0m \\033[30;1m%s\\033[0m\\033[33m%s\\n\", $1, $2, gensub(/(.{49}).{2,}/, \"\\\\1…\",\"g\",$3), $4, $5, $6 }' | less -R"
-	lg80 = "!git log --graph --color=always --abbrev-commit --date=relative --pretty=format:'%x00%h%x00%s%x00%cd%x00%an%x00%d' | gawk -F '\\0' '{ printf \"%s\\033[31m%s\\033[0m %-80s \\033[32m%14s\\033[0m \\033[30;1m%s\\033[0m\\033[33m%s\\n\", $1, $2, gensub(/(.{79}).{2,}/, \"\\\\1…\",\"g\",$3), $4, $5, $6 }' | less -R"
 
 [color]
 	diff = auto
@@ -56,9 +47,9 @@
 
 [core]
 	excludesfile = <%= ENV['HOME'] %>/.global_ignore
-	editor = <%= (`command -v vim` && $?.exitstatus==0 ? `which vim` : `which vi`).chomp %>
+	editor = vim
 	pager = "less -RciqMSj5"
-	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 
 [format]
 	pretty = %C(yellow)%h%Creset %s
@@ -69,3 +60,4 @@
 [github]
 	user = <%= print("Your Github Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	token = <%= print("Your Github Token: "); STDOUT.flush; STDIN.gets.chomp %>
+
