--- a/.gitconfig.erb
+++ b/.gitconfig.erb
@@ -1,7 +1,3 @@
-[user]
-	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
-	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
-
 [alias]
 	b = branch
 	ci = commit -v
@@ -20,6 +16,9 @@
 	rollback = checkout --
 	st = status -sb
 	vis = !gitk --all &
+
+[apply]
+  whitespace = nowarn
 
 [color]
 	diff = auto
@@ -51,13 +50,17 @@
 	pager = "less -RciqMSj5"
 	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 
+[credential]
+  helper = cache --timeout=3600
+
 [format]
 	pretty = %C(yellow)%h%Creset %s
-
-[apply]
-	whitespace = nowarn
 
 [github]
 	user = <%= print("Your Github Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	token = <%= print("Your Github Token: "); STDOUT.flush; STDIN.gets.chomp %>
+
+[user]
+  name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
+  email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 
